[package]
name = "iroha_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# `iroha2-dev` as for 2023-06-05
iroha_crypto = { git = "https://github.com/hyperledger/iroha.git", rev = "f407c99394ea9a17a6653ef33ab66858238cdd18" }
iroha_data_model = { git = "https://github.com/hyperledger/iroha.git", rev = "f407c99394ea9a17a6653ef33ab66858238cdd18" }
iroha_primitives = { git = "https://github.com/hyperledger/iroha.git", rev = "f407c99394ea9a17a6653ef33ab66858238cdd18" }


clap = { version = "4.3.1", features = ["derive"] }
schematic = { version = "0.7.0", features = ["json", "toml"] }
serde = { version = "1", features = ["derive"] }
url = { version = "2.3.1", features = ["serde"] }
color-eyre = "0.6.2"
toml = "0.7.4"
